--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "sweetalert": "^2.1.2",
-    "uuid4": "^2.0.3"
+    "uuid4": "^2.0.3",
+    "xlsx": "^0.18.5"
   },
   "engines": {
     "node": "22.x"
