--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.9.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
+    "sitemap": "^8.0.0",
     "sweetalert": "^2.1.2",
     "uuid4": "^2.0.3",
     "xlsx": "^0.18.5"
