--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "sitemap": "^8.0.0",
+    "stream": "^0.0.3",
     "sweetalert": "^2.1.2",
     "uuid4": "^2.0.3",
     "xlsx": "^0.18.5"
